5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1585_2905.log
== TEST (2019-03-26 11:03:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu 
from math import*

a = float(input("valor a: "))
b = float(input("valor b: "))
c = float(input("valor c: "))

s = (a + b + c)/2
A = sqrt(s(s-a)*(s-b)*(s-c))

print(round(A, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    A = sqrt(s(s-a)*(s-b)*(s-c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:04:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu 
from math import*

a = float(input("valor a: "))
b = float(input("valor b: "))
c = float(input("valor c: "))

s = (a + b + c)/2
A = sqrt(s(s-a)*(s-b)*(s-c))

print(float(round(A, 5)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    A = sqrt(s(s-a)*(s-b)*(s-c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:05:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu 
from math import*

a = float(input("valor a: "))
b = float(input("valor b: "))
c = float(input("valor c: "))

s = (a + b + c)/2
A = float(sqrt(s(s-a)*(s-b)*(s-c)))

print(round(A, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    A = float(sqrt(s(s-a)*(s-b)*(s-c)))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:07:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu 
from math import*

a = float(input("valor a: "))
b = float(input("valor b: "))
c = float(input("valor c: "))

s = (a + b + c)/2
A = sqrt(s(s-a)*(s-b)*(s-c))

print(round(A, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    A = sqrt(s(s-a)*(s-b)*(s-c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:10:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu 
from math import*

a = float(input("valor a: "))
b = float(input("valor b: "))
c = float(input("valor c: "))

s = (a + b + c)/2
A = float((sqrt(s*(s-a)*(s-b)*(s-c)))

print(round(A, 5))

-- ERROR:
File "XXXX", line 13
    print(round(A, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:11:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu 
from math import*

a = float(input("valor a: "))
b = float(input("valor b: "))
c = float(input("valor c: "))

s = (a + b + c)/2
j = float((sqrt(s*(s-a)*(s-b)*(s-c)))

print(round(j, 5))

-- ERROR:
File "XXXX", line 13
    print(round(j, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:11:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu 
from math import*

a = float(input("valor a: "))
b = float(input("valor b: "))
c = float(input("valor c: "))

s = (a + b + c)/2
area = float((sqrt(s*(s-a)*(s-b)*(s-c)))

print(round(area, 5))

-- ERROR:
File "XXXX", line 13
    print(round(area, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:12:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu 
from math import*

a = float(input("valor a: "))
b = float(input("valor b: "))
c = float(input("valor c: "))

s = (a + b + c)/2
area = float((sqrt(s*(s-a)*(s-b)*(s-c)))

print (round(area, 5))

-- ERROR:
File "XXXX", line 13
    print (round(area, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:12:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu 
from math import*

a = float(input("valor a: "))
b = float(input("valor b: "))
c = float(input("valor c: "))

s = (a + b + c)/2
area = float(sqrt(s*(s-a)*(s-b)*(s-c))

print(round(area, 5))

-- ERROR:
File "XXXX", line 13
    print(round(area, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:12:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu 
from math import*

a = float(input("valor a: "))
b = float(input("valor b: "))
c = float(input("valor c: "))

s = (a + b + c)/2
area = float(sqrt(s*(s-a)*(s-b)*(s-c))

print(round( area, 5))

-- ERROR:
File "XXXX", line 13
    print(round( area, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:13:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu 
from math import*

a = float(input("valor a: "))
b = float(input("valor b: "))
c = float(input("valor c: "))

s = (a + b + c)/2
area = float(sqrt(s*(s-a)*(s-b)*(s-c))

print(round(area, 5))

-- EXECUTION TIME:
0.139756
-- ERROR:
  File "/home/codebench/codes/1585/2905/main.py", line 13
    print(round(area, 5))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:13:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu 
from math import*

a = float(input("valor a: "))
b = float(input("valor b: "))
c = float(input("valor c: "))

s = (a + b + c)/2

area = float(sqrt(s*(s-a)*(s-b)*(s-c))

print(round(area, 5))

-- ERROR:
File "XXXX", line 14
    print(round(area, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:13:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu 

from math import*

a = float(input("valor a: "))
b = float(input("valor b: "))
c = float(input("valor c: "))

s = (a + b + c)/2

area = float(sqrt(s*(s-a)*(s-b)*(s-c))

print(round(area, 5))

-- ERROR:
File "XXXX", line 15
    print(round(area, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:14:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu 

from math import*

a = float(input("valor a: "))
b = float(input("valor b: "))
c = float(input("valor c: "))

s = (a + b + c)/2

area = float(sqrt(s*(s-a)*(s-b)*(s-c))

print(round(area, 5))

-- ERROR:
File "XXXX", line 15
    print(round(area, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:14:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu 

from math import*

a = float(input("valor a: "))
b = float(input("valor b: "))
c = float(input("valor c: "))

s = (a + b + c)/2

area = float(sqrt(s*(s-a)*(s-b)*(s-c))

print(round(area,5))

-- ERROR:
File "XXXX", line 15
    print(round(area,5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:14:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu 

from math import*

a = float(input("valor a: "))
b = float(input("valor b: "))
c = float(input("valor c: "))

s = (a + b + c)/2

area = float(sqrt(s*(s-a)*(s-b)*(s-c))

print(round(area,5))

-- ERROR:
File "XXXX", line 15
    print(round(area,5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:14:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu 

from math import*

a = float(input("valor a: "))
b = float(input("valor b: "))
c = float(input("valor c: "))

s = (a + b + c)/2

area = float(sqrt(s*(s-a)*(s-b)*(s-c))

print(round(area, 5))

-- ERROR:
File "XXXX", line 15
    print(round(area, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:14:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu 

from math import*

a = float(input("valor a: "))
b = float(input("valor b: "))
c = float(input("valor c: "))

s = (a + b + c)/2

area = float(sqrt(s*(s-a)*(s-b)*(s-c)))

print(round(area, 5))

-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:15:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu 

from math import*

a = float(input("valor a: "))
b = float(input("valor b: "))
c = float(input("valor c: "))

s = (a + b + c)/2

area = (sqrt(s*(s-a)*(s-b)*(s-c)))

print(round(area, 5))

-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:15:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu 

from math import*

a = float(input("valor a: "))
b = float(input("valor b: "))
c = float(input("valor c: "))

s = (a + b + c)/2

area = (sqrt(s*(s-a)*(s-b)*(s-c)))

print(round(area, 5))

-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:15:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu 

from math import*

a = float(input("valor a: "))
b = float(input("valor b: "))
c = float(input("valor c: "))

s = (a + b + c)/2

area = (sqrt(s*(s-a)*(s-b)*(s-c)))

print(round(area, 5))

-- EXECUTION TIME:
0.166702
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
